fixing spacing

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,8 +1,16 @@
-$primary-color: #272722;
-$accent-color: #56b431;
-$text-color: white;
+$natgas-claro: #007DBA;
+$verde-natgas: #43B02A;
+$azul-natgas: #002b49;
+$gris-cool: #098B90;
+$light-text-color: white;
+$dark-text-color: black;
 $font-weights: (
-    "regular": 400,
-    "medium": 500,
-    "bold": 700,
+    "light": 400,
+    "extra-bold": 700,
 );
+
+@font-face {
+    font-family: Gilroy;
+    src: url();
+}
+
